--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -61,5 +61,43 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script>
+var tree = 
+[
+  {
+    text: "Parent 1",
+    nodes: 
+    [
+      {
+        text: "Child 1",
+        nodes: 
+        [
+          {
+            text: "Grandchild 1"
+          },
+          {
+            text: "Grandchild 2"
+          }
+        ]
+      },
+      {
+        text: "Child 2"
+      }
+    ]
+  },
+  {
+    text: "Parent 2"
+  },
+  {
+    text: "Parent 3"
+  },
+  {
+    text: "Parent 4"
+  },
+  {
+    text: "Parent 5"
+  }
+];            
+        </script>
     </body>
 </html>
