--- a/src/main/resources/templates/user/docs-admins-frag.html
+++ b/src/main/resources/templates/user/docs-admins-frag.html
@@ -16,13 +16,13 @@
 					    			<h3 class="panel-title"><a href="#docs-admins" data-toggle="collapse">Documents administratifs</a></h3>
 					    		</div>	
 					    		<div class="list-group panel-collapse collapse" id="docs-admins" >			    	
-						    		<li class="list-group-item"> Ministère : <span class="badge" th:text="${user.agent.fixeBureau}"></span></li>
-						    		<li class="list-group-item"> Structure : <span class="badge" th:text="${user.agent.matricule}"></span></li>
-						    		<li class="list-group-item"> Fonction : <span class="badge" th:text="${user.agent.sexe}"></span></li>
-						    		<li class="list-group-item"> Matricule : <span class="badge" th:text="${user.agent.dateNaissance}"></span></li>
-						    		<li class="list-group-item"> Type de pièce : <span class="badge" th:text="${user.agent.typePiece}"></span></li>
-						    		<li class="list-group-item"> N° de pièce : <span class="badge" th:text="${user.agent.numPiece}"></span></li>
-						    		<li class="list-group-item"> Type d'abonné : <span class="badge" th:text="${user.agent.numPiece}"></span></li>
+						    		<li class="list-group-item"> Ministère : <span class="badge" th:text="${visitedUser.agent.fixeBureau}"></span></li>
+						    		<li class="list-group-item"> Structure : <span class="badge" th:text="${visitedUser.agent.matricule}"></span></li>
+						    		<li class="list-group-item"> Fonction : <span class="badge" th:text="${visitedUser.agent.sexe}"></span></li>
+						    		<li class="list-group-item"> Matricule : <span class="badge" th:text="${visitedUser.agent.dateNaissance}"></span></li>
+						    		<li class="list-group-item"> Type de pièce : <span class="badge" th:text="${visitedUser.agent.typePiece}"></span></li>
+						    		<li class="list-group-item"> N° de pièce : <span class="badge" th:text="${visitedUser.agent.numPiece}"></span></li>
+						    		<li class="list-group-item"> Type d'abonné : <span class="badge" th:text="${visitedUser.agent.numPiece}"></span></li>
 					    		</div>
 					    	</div>	
 					    </div>
