--- a/src/main/resources/templates/agent/frm/frm-agent.html
+++ b/src/main/resources/templates/agent/frm/frm-agent.html
@@ -49,7 +49,7 @@
 <body>
     <div layout:fragment="content">
         <div class="container-fluid">
-            <form id="frm-agent" th:action="@{/staffadmin/agents/save}" method="post" enctype="multipart/form-data">
+            <form id="frm-agent" th:action="@{/staffadmin/agents/save}" method="post" enctype="multipart/form-data" th:object="${agent}">
                 <div class="alert alert-danger col-lg-12 mb-3" th:if="${errorMsg}">
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                     <strong>Erreur de saisie : </strong> 
