--- a/src/main/resources/templates/user/infos-personnelles-frag.html
+++ b/src/main/resources/templates/user/infos-personnelles-frag.html
@@ -15,13 +15,13 @@
 					    			<h3 class="panel-title"><a href="#infos-personnelles" data-toggle="collapse">Informations personnelles</a></h3>
 					    		</div>
 					    		<div id = "infos-personnelles" class="list-group panel-collapse collapse">
-						    		<li class="list-group-item"> Nom : <span class="badge" th:text="${user.agent.nom}"></span></li>
-						    		<li class="list-group-item"> Prénom : <span class="badge" th:text="${user.agent.prenom}"></span></li>
-						    		<li class="list-group-item"> Sexe : <span class="badge" th:text="${user.agent.sexe}"></span></li>
-						    		<li class="list-group-item"> Date de naissance : <span class="badge" th:text="${user.agent.dateNaissance}"></span></li>
-						    		<li class="list-group-item"> Lieu de naissance : <span class="badge" th:text="${user.agent.lieuNaissance}"></span></li>
-						    		<li class="list-group-item"> E-mail : <span class="badge" th:text="${user.agent.email}"></span></li>
-						    		<li class="list-group-item"> Téléphone : <span class="badge" th:text="${user.agent.tel}"></span></li>
+						    		<li class="list-group-item"> Nom : <span class="badge" th:text="${visitedUser.agent.nom}"></span></li>
+						    		<li class="list-group-item"> Prénom : <span class="badge" th:text="${visitedUser.agent.prenom}"></span></li>
+						    		<li class="list-group-item"> Sexe : <span class="badge" th:text="${visitedUser.agent.sexe}"></span></li>
+						    		<li class="list-group-item"> Date de naissance : <span class="badge" th:text="${visitedUser.agent.dateNaissance}"></span></li>
+						    		<li class="list-group-item"> Lieu de naissance : <span class="badge" th:text="${visitedUser.agent.lieuNaissance}"></span></li>
+						    		<li class="list-group-item"> E-mail : <span class="badge" th:text="${visitedUser.agent.email}"></span></li>
+						    		<li class="list-group-item"> Téléphone : <span class="badge" th:text="${visitedUser.agent.tel}"></span></li>
 					    		</div>
 					    	</div>
 					    </div>
