--- a/src/main/resources/templates/user/summary-card-frag.html
+++ b/src/main/resources/templates/user/summary-card-frag.html
@@ -12,7 +12,7 @@
 			<div class="row content-panel" style="margin-left: 3px;">
 				<div class="col-md-3 profile-text mt mb centered">
 				<div class="right-divider hidden-sm hidden-xs">
-					<h4 th:text="${user.agent.nom + ' ' + user.agent.prenom}">Sam Soffes</h4>
+					<h4 th:text="${visitedUser.agent.nom + ' ' + visitedUser.agent.prenom}">Nom Prénom</h4>
 					<h6>FOLLOWERS</h6>
 					<h4>290</h4>
 					<h6>FOLLOWING</h6>
@@ -23,16 +23,16 @@
 				<!-- /col-md-4 -->
 				<div class="col-md-6 profile-text">
 					
-					<h4 th:text="${user.agent.titre==null} ? ${user.agent.fonction.nomFonction} : ${user.agent.titre}">Main Administrator</h4>
-					<h4 th:text="${'Grade ' + user.agent.grade.nomGrade}"></h4>
-					<h4 th:text="${user.agent.emploi.nomEmploi}"></h4>
+					<h4 th:text="${visitedUser.agent.titre==null} ? ${visitedUser.agent.fonction.nomFonction} : ${visitedUser.agent.titre}">Main Administrator</h4>
+					<h4 th:text="${'Grade ' + visitedUser.agent.grade.nomGrade}"></h4>
+					<h4 th:text="${visitedUser.agent.emploi.nomEmploi}"></h4>
 					<br/>
 
 				</div>
 				<!-- /col-md-4 -->
 				<div class="col-md-3 centered">
 				<div class="profile-pic">
-					<p><img th:src="@{'/staffadmin/agents/'+${user.agent.idAgent}+'/photo'}" class="img-circle"/></p>
+					<p><img th:src="@{'/staffadmin/agents/'+${visitedUser.agent.idAgent}+'/photo'}" class="img-circle"/></p>
 					<p>
 					<button class="btn btn-theme"><i class="fa fa-check"></i> Follow</button>
 					<button class="btn btn-theme02">Add</button>
